tests/errors/list_type_mismatch_concatenation.dang
# This should fail: mixing String and Int lists in concatenation
pub result = [] + ["foo"] + [3]
